Refatoração do Botão "Somar": Transformamos o DisplayAlert em um Popup dedicado.
O novo pop-up exibe a soma total de todos os itens da lista.

Adicionamos um Picker que é populado com as categorias únicas do banco de dados, permitindo que o usuário selecione uma categoria para ver a soma total dos itens daquele tipo.

Criamos a lógica no SomarPopup.xaml.cs para somar os valores, popular o Picker e calcular a soma de cada categoria selecionada.

Melhorias na Interface do FiltroPopup:

Alinhamento: Alinhamos o pop-up à direita da tela para que ele se posicione de forma intuitiva, alinhado com o botão de filtro.

Organização: Agrupamos os botões de filtro e ordenação por tipo usando StackLayouts para uma interface mais limpa.

Estilo: Criamos um Style global para os botões do pop-up, garantindo que a fonte e o tamanho de todos os botões sejam consistentes.

Melhoria do Filtro por Categoria:

Substituímos o campo de texto (Entry) de categoria por um Picker.

O Picker agora é preenchido dinamicamente com as categorias que já existem no banco de dados, evitando erros de digitação e tornando o filtro mais intuitivo.

Ajustes no DatePicker da Tela de Edição:

Corrigimos a vinculação (Binding) do DatePicker para que ele exiba corretamente a data de cadastro do produto que está sendo editado.

--- a/MauiAppMinhasCompras/MauiAppMinhasCompras.csproj
+++ b/MauiAppMinhasCompras/MauiAppMinhasCompras.csproj
@@ -57,6 +57,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="7.0.1" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
@@ -71,6 +72,12 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\NovoProduto.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Popups\FiltroPopup.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Popups\SomarPopup.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
